ai functionality update ai summarize and ai document anylizer features

--- a/TaskList.Api/appsettings.json
+++ b/TaskList.Api/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=.;Database=TaskListDb;User Id=sa;Password=root;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": ""
   },
   "Jwt": {
-    "Key": "THIS_IS_A_VERY_SECRET_KEY_123456789",
+    "Key": "",
     "Issuer": "TaskListApi",
     "Audience": "TaskListClient"
   },
@@ -13,5 +13,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HuggingFace": {
+    "ApiKey": "",
+    "Model": "google/flan-t5-small"
+  }
 }
